@@ -49,6 +49,7 @@ endif
 
 libR:
 	@$(MAKE) --no-print-directory -C $(RHOME)/src/gnuwin32 libR.a
+	@$(MAKE) --no-print-directory -C $(RHOME)/src/gnuwin32 libRblas.a
 
 $(DLLNAME)_res.rc:
 	@PERL5LIB=$(RHOME)/share/perl perl $(RHOME)/src/gnuwin32/makeDllRes.pl $(DLLNAME) > $@
