@@ -992,9 +992,18 @@ void Specify2(char *what, SEXP value, DevDesc *dd)
     else if (streql(what, "mgp")) {
 	value = coerceVector(value, REALSXP);
 	lengthCheck(what, value, 3);
+#ifdef till_R_1_5_0
 	nonnegRealCheck(REAL(value)[0], what);
 	nonnegRealCheck(REAL(value)[1], what);
 	nonnegRealCheck(REAL(value)[2], what);
+#else /* S-compatible */
+	naRealCheck(REAL(value)[0], what);
+	naRealCheck(REAL(value)[1], what);
+	naRealCheck(REAL(value)[2], what);
+	if(REAL(value)[0] * REAL(value)[1] < 0 ||
+	   REAL(value)[0] * REAL(value)[2] < 0)
+	    warningcall(gcall, "`mgp[1:3]' are of differing sign");
+#endif
 	Rf_gpptr(dd)->mgp[0] = REAL(value)[0];
 	Rf_gpptr(dd)->mgp[1] = REAL(value)[1];
 	Rf_gpptr(dd)->mgp[2] = REAL(value)[2];
