@@ -1,6 +1,6 @@
 
 R : Copyright 2002, The R Development Core Team
-Version 1.5.0 Patched (2002-05-07)
+Version 1.5.0 Patched (2002-05-30)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -82,6 +82,7 @@ par("usr")[3:4]:     3.142     3.142
 par("yaxp") :        3.142     3.142         1
 
 j.f = 3e-13 ;  rel.range = 16.55 * EPS
+Warning:  .. GPretty(.): new *lo = 3.14159 < 3.14159 = x1
 Warning: relative range of values = 17.1887 * EPS, is small (axis 2).
 par("usr")[3:4]:     3.142     3.142
 par("yaxp") :        3.142     3.142         1
@@ -157,4 +158,15 @@ Warning in xy.coords(x = matrix(rep(tx, k), ncol = k), y = x, log = log) :
 +                     lty="blank", bg="blue"))
 > ## in 1.5.0 ignored the lty.
 > 
+> ## axis() and par(mgp < 0) {keep this example S+ compatible!}:
+> x <- seq(-2,3, len=1001)
+> op <- par(tck= +0.02, mgp = -c(3,2,0))
+> plot(x, x^2 - 1.2, xaxt = "n", xlab="", type ='l', col = 2,
++      main = "mgp < 0: all ticks and labels inside `frame'")
+> x <- -2:3
+> lines(x, x^2 - 1.2, type ="h", col = 3, lwd=3)
+> axis(1, pos = 0, at=-1:1, lty = 3, col=4) ## col & lty work only from 1.6 in R
+> par(op)
+> axis(1, pos = 0, at=c(-2,2,3), lty = 3, col=4)
+> mtext(side=1,"note the x-ticks on the other side of the bars")
 > 
